test/corpus/funkcija.txt
==================
Brez tipa
==================

funkcija f(a: celo, b: bool) {}

---

(datoteka
    (funkcija
        (ime)
        (parametri
            (parameter
                (ime)
                (tip))
            (parameter
                (ime)
                (tip)))
        telo: (okvir)))

==================
S tipom
==================

funkcija g(a: celo, b: bool) -> real {}

---

(datoteka
    (funkcija
        (ime)
        (parametri
            (parameter
                (ime)
                (tip))
            (parameter
                (ime)
                (tip)))
        vrni: (tip)
        telo: (okvir)))

==================
Vrni
==================

vrni i + 1

---

(datoteka
    (vrni
        (aritmeticni_izraz
            (ime)
            (stevilo))))
