test/corpus/funkcijski_klic.txt
==================
Brez parametrov
==================

naj i = init()

---

(source_file
    (inicializacija
        (ime)
        (funkcijski_klic
            funkcija: (ime))))

==================
S parametri
==================

naj i = korak(x, x + 1)

---

(source_file
    (inicializacija
        (ime)
        (funkcijski_klic
            funkcija: (ime)
            (argumenti
                (ime)
                (aritmeticni_izraz
                    (ime)
                    (stevilo))))))

==================
Makro klic
==================

natisni!("pi ≃ ", 3.14, " +- ", abs(PI - 3.14))

---

(source_file
    (makro_klic
        funkcija: (ime)
        (argumenti
            (niz)
            (stevilo)
            (niz)
            (funkcijski_klic
                funkcija: (ime)
                (argumenti
                    (aritmeticni_izraz
                        (ime)
                        (stevilo)))))))

